# very-interesting-task

./: .env.example  .gitignore  LICENSE  README.md  config.py  logic.py  main.py  models.py  oauth.py  pyproject.toml
assets/: 13-template.docx  7-template.docx  8-template.docx  temp.docx  template.docx  ~$temp.docx
clients/: client.py  stepik.py  word.py  word_client.py
models/: app.py  config.py  stepik.py
tests/: test_client.py  test_logic.py  test_stepik_client.py  test_word_client.py
